# hf-pytorch

./: README.md  pyproject.toml  requirements.txt
src/hf_pytorch/: run_audio_classification.py  run_classification.py  run_clip.py  run_clm.py  run_clm_no_trainer.py  run_fim.py  run_fim_no_trainer.py  run_glue.py  run_glue_no_trainer.py  run_image_classification.py  run_image_classification_no_trainer.py  run_instance_segmentation.py  run_instance_segmentation_no_trainer.py  run_mae.py  run_mim.py  run_mim_no_trainer.py  run_mlm.py  run_mlm_no_trainer.py  run_ner.py  run_ner_no_trainer.py  run_object_detection.py  run_object_detection_no_trainer.py  run_plm.py  run_qa.py  run_qa_beam_search.py  run_qa_beam_search_no_trainer.py  run_qa_no_trainer.py  run_semantic_segmentation.py  run_semantic_segmentation_no_trainer.py  run_seq2seq_qa.py  run_speech_recognition_ctc.py  run_speech_recognition_ctc_adapter.py  run_speech_recognition_seq2seq.py  run_summarization.py  run_summarization_no_trainer.py  run_swag.py  run_swag_no_trainer.py  run_translation.py  run_translation_flat.py  run_translation_no_trainer.py  (+1 more)
