[project]
name = "hf_pytorch"
version = "0.1.0"

[project.scripts]
#3d_parallel_checks = "hf_pytorch.3d_parallel_checks:main"
conftest = "hf_pytorch.conftest:main"
context_parallel = "hf_pytorch.context_parallel:main"
continuous_batching = "hf_pytorch.continuous_batching:main"
continuous_batching_simple = "hf_pytorch.continuous_batching_simple:main"
old_test_xla_examples = "hf_pytorch.old_test_xla_examples:main"
run_audio_classification = "hf_pytorch.run_audio_classification:main"
run_classification = "hf_pytorch.run_classification:main"
run_clip = "hf_pytorch.run_clip:main"
run_clm_no_trainer = "hf_pytorch.run_clm_no_trainer:main"
run_clm = "hf_pytorch.run_clm:main"
run_fim_no_trainer = "hf_pytorch.run_fim_no_trainer:main"
run_fim = "hf_pytorch.run_fim:main"
run_generation = "hf_pytorch.run_generation:main"
run_glue_no_trainer = "hf_pytorch.run_glue_no_trainer:main"
run_glue = "hf_pytorch.run_glue:main"
run_image_classification_no_trainer = "hf_pytorch.run_image_classification_no_trainer:main"
run_image_classification = "hf_pytorch.run_image_classification:main"
run_instance_segmentation_no_trainer = "hf_pytorch.run_instance_segmentation_no_trainer:main"
run_instance_segmentation = "hf_pytorch.run_instance_segmentation:main"
run_mae = "hf_pytorch.run_mae:main"
run_mim_no_trainer = "hf_pytorch.run_mim_no_trainer:main"
run_mim = "hf_pytorch.run_mim:main"
run_mlm_no_trainer = "hf_pytorch.run_mlm_no_trainer:main"
run_mlm = "hf_pytorch.run_mlm:main"
run_ner_no_trainer = "hf_pytorch.run_ner_no_trainer:main"
run_ner = "hf_pytorch.run_ner:main"
run_object_detection_no_trainer = "hf_pytorch.run_object_detection_no_trainer:main"
run_object_detection = "hf_pytorch.run_object_detection:main"
run_plm = "hf_pytorch.run_plm:main"
run_qa_beam_search_no_trainer = "hf_pytorch.run_qa_beam_search_no_trainer:main"
run_qa_beam_search = "hf_pytorch.run_qa_beam_search:main"
run_qa_no_trainer = "hf_pytorch.run_qa_no_trainer:main"
run_qa = "hf_pytorch.run_qa:main"
run_semantic_segmentation_no_trainer = "hf_pytorch.run_semantic_segmentation_no_trainer:main"
run_semantic_segmentation = "hf_pytorch.run_semantic_segmentation:main"
run_seq2seq_qa = "hf_pytorch.run_seq2seq_qa:main"
run_speech_recognition_ctc_adapter = "hf_pytorch.run_speech_recognition_ctc_adapter:main"
run_speech_recognition_ctc = "hf_pytorch.run_speech_recognition_ctc:main"
run_speech_recognition_seq2seq = "hf_pytorch.run_speech_recognition_seq2seq:main"
run_summarization_no_trainer = "hf_pytorch.run_summarization_no_trainer:main"
run_summarization = "hf_pytorch.run_summarization:main"
run_swag_no_trainer = "hf_pytorch.run_swag_no_trainer:main"
run_swag = "hf_pytorch.run_swag:main"
run_translation_no_trainer = "hf_pytorch.run_translation_no_trainer:main"
run_translation = "hf_pytorch.run_translation:main"
run_translation_flat = "hf_pytorch.run_translation_flat:main"
run_wav2vec2_pretraining_no_trainer = "hf_pytorch.run_wav2vec2_pretraining_no_trainer:main"
run_xnli = "hf_pytorch.run_xnli:main"
test_accelerate_examples = "hf_pytorch.test_accelerate_examples:main"
test_pytorch_examples = "hf_pytorch.test_pytorch_examples:main"
trainer_qa = "hf_pytorch.trainer_qa:main"
trainer_seq2seq_qa = "hf_pytorch.trainer_seq2seq_qa:main"
utils_qa = "hf_pytorch.utils_qa:main"
xla_spawn = "hf_pytorch.xla_spawn:main"
